Fixed margins and spacing inside the banner

--- a/css/components/banners.css
+++ b/css/components/banners.css
@@ -53,5 +53,5 @@
 }
 
 .banner a {
-  margin-left: 349px;
+  margin-left: 360px;
 }
